feature: 初步实现简易版海报功能

--- a/src/components/poster/index.less
+++ b/src/components/poster/index.less
@@ -1,33 +1,28 @@
 .m-poster {
 
-    // 图片预览
-    .shareImage-preview {
-        position: flex;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+    // 长图
+    .m-long-picture {
+        width: 750px;
+        line-height: 1;
 
-        .mask {
-            position: fixed;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            z-index: 1000;
-            background-color: rgba(0, 0, 0, .45);
+        .title-desc {
+            padding: 0 80px;
+            margin: 30px 0;
+            font-size: 38px;
+            font-weight: bold;
         }
 
-        .wrap {
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 50%;
-            z-index: 1000;
-            overflow: auto;
-            text-align: center;
-            transform: translateX(-50%);
-            scroll-behavior: smooth;
+        .title-requst {
+            padding: 0 80px;
+            margin: 60px 0 30px 0;
+            font-size: 38px;
+            font-weight: bold;
+        }
+
+        .content {
+            padding: 0 80px;
+            font-size: 28px;
+            line-height: 42px;
         }
     }
 }
