feature: 支持生成动态长度的长图

--- a/src/components/poster/index.less
+++ b/src/components/poster/index.less
@@ -1,4 +1,12 @@
 .m-poster {
+    .shareImage {
+        width: 750px;
+    }
+
+    .long-picture {
+        position: absolute;
+        top: -99999px;
+    }
 
     // 长图
     .m-long-picture {
