--- a/src/components/poster/picture.less
+++ b/src/components/poster/picture.less
@@ -2,6 +2,11 @@
     width: 750px;
     line-height: 1;
 
+    .header-img {
+        width: 750px;
+        height: 570px;
+    }
+
     .title-desc {
         padding: 0 80px;
         margin: 30px 0;
@@ -20,5 +25,11 @@
         padding: 0 80px;
         font-size: 28px;
         line-height: 42px;
+    }
+
+    .footer-img {
+        width: 750px;
+        height: 310px;
+        margin-top: 30px;
     }
 }
